--- a/midterm_styling/package.json
+++ b/midterm_styling/package.json
@@ -1,5 +1,19 @@
 {
   "name": "midterm_styling",
   "version": "0.1.0",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-highlighter": "^0.4.2",
+    "react-modal": "^3.3.2",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
