--- a/Final/final_draggable/package.json
+++ b/Final/final_draggable/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "react": "^16.3.2",
+    "react-contenteditable": "^2.0.7",
     "react-dom": "^16.3.2",
+    "react-draggable": "^3.0.5",
     "react-scripts": "1.1.4"
   },
   "scripts": {
