--- a/Final/final_rnd/package.json
+++ b/Final/final_rnd/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "final_draftjs",
+  "name": "final_rnd",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "draft-js": "^0.10.5",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-draggable": "^3.0.5",
-    "react-resizable": "^1.7.5",
     "react-rnd": "^7.4.0",
     "react-scripts": "1.1.4"
   },
