--- a/Final/final_draftjs/package.json
+++ b/Final/final_draftjs/package.json
@@ -5,12 +5,16 @@
   "dependencies": {
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
+    "draftjs-to-html": "^0.8.3",
+    "html-to-draftjs": "^1.4.0",
     "install": "^0.11.0",
     "npm": "^6.0.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-draft-wysiwyg": "^1.12.13",
     "react-draggable": "^3.0.5",
     "react-modal": "^3.4.4",
+    "react-onclickoutside": "^6.7.1",
     "react-resizable": "^1.7.5",
     "react-rnd": "^7.4.0",
     "react-router-dom": "^4.2.2",
