--- a/Final/final_wysiwyg/package.json
+++ b/Final/final_wysiwyg/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "draft-js": "^0.10.5",
+    "draft-js-export-html": "^1.2.0",
+    "draftjs-to-html": "^0.8.3",
+    "html-to-draftjs": "^1.4.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-draft-wysiwyg": "^1.12.13",
